--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,106 @@
     box-sizing: border-box;
 }
 
+.container {
+
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+
+}
+
+/* HEADER */
+
+/* TODO da rimuovere */
+.container div {
+    border: 1px dashed black;
+}
+
+
+.top-bar {
+    background-color: #FF6900;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    
+    /* TODO Mettere come ombra */
+    margin-bottom: 10px solid grey;
+}
+
+.top-bar > .container {
+    justify-content: space-between;
+    color: white;
+    padding: 10px;  
+}
+
+.category {
+    width: 25%;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+}
+
+.category a {
+    text-decoration: none;
+    margin: 0 10px;
+    color: white;
+}
+
+.logo {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo > img{
+    width: 100px;
+}
+
+.nav-icons {
+    width: 25%;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+
+}
+
+/* MAIN */
+
+main {
+    margin-top: 50px;
+}
+
+main > .container {
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.product-card {
+    background-color: purple;
+    border: 1px solid black;
+    width: calc(100% / 3 - 10px);
+    height: 400px;
+    margin: 20px 5px 5px 5px;
+}
+
+
+/* FOOTER */
+
+footer {
+    background-color: black;
+    color: white;
+}
+
+footer > .container {
+    justify-content: space-between;
+}
+.footer-links > a {
+    text-decoration: none;
+    padding-right: 5px;
+    font-size: 10px;
+    color: white;
+}
