--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 .container {
 
     width: 80%;
@@ -58,6 +62,7 @@
     text-decoration: none;
     margin: 0 10px;
     color: white;
+    font-weight: 600;
 }
 
 .logo {
@@ -122,9 +127,9 @@ main > .container {
     top: 5px;
     right: 0px;
     z-index: 2;
-    font-size: 24px;
-    width: 30px;
-    height: 30px;
+    font-size: 32px;
+    width: 50px;
+    height: 50px;
     background-color: white;
 
 }
@@ -142,23 +147,44 @@ main > .container {
     color: white;
 }
 
+.lab {
+    margin-right: 5px;
+    padding: 5px 10px;
+    font-size: 12px;
+    font-weight: 600;
+}
+
 .discount {
     background-color: red;
-    margin-left: 5px;
+
 }
 
 .tag-1 {
     background-color: green;
-    margin-left: 5px;
+
 }
 
+.product-name {
+    text-transform: uppercase;
+    font-weight: 700;
+}
 
+.real-price {
+    color: red;
+    font-weight: 700;
+}
+
+.old-price {
+    text-decoration: line-through;
+}
 
 /* FOOTER */
 
 footer {
     background-color: black;
     color: white;
+    margin-top: 40px;
+    padding: 20px 0px;
 }
 
 footer > .container {
