Trasformato cuore in bottone

--- a/css/style.css
+++ b/css/style.css
@@ -131,11 +131,13 @@ main > .container {
     width: 50px;
     height: 50px;
     background-color: white;
+    border: none;
 
 }
 
 .like-heart:hover{
     color: red;
+    cursor: pointer;
 }
 
 .labels {
